wp-content/themes/csisjti/assets/_scss/components/_facets.scss
@use '../abstracts' as *;

@use './facets-pagination';
@use './facets-sort';

.resource-library__inline-filters .facetwp {
  &-facet {
    position: relative;
    height: rem(60);
    margin-bottom: rem(12) !important; // Override plugin default styles
  }

  // Hides counters next to items
  &-counter {
    display: none;
  }

  &-hidden {
    display: none;
  }
}

/*----------  Facet: Search  ----------*/

.facetwp-input-wrap {
  display: block !important;
  height: 100%;
}

.facetwp-search {
  --input-background: #{$color-white-100};
  --input-border: #{$color-gray-200};
  width: 100%;
  height: 100%;
  padding: rem(8) rem(16) rem(8) rem(48) !important;
  @extend %font-ui-text-lg;
  background-color: var(--input-background);
  border: 2px solid var(--input-border);
  border-radius: 3px;
  transition: background 0.3s ease-in-out, border 0.3s ease-in-out;

  &:hover {
    --input-border: #{$color-primary-blue-600};
    box-shadow: 0 3px 4px rgba(2, 3, 3, 0.03), 0 3px 3px rgba(2, 3, 3, 0.02),
      0 1px 8px rgba(2, 3, 3, 0.04);
  }

  &::placeholder {
    color: $color-black-140;
  }
}

.facetwp-icon {
  right: unset !important;
  left: rem(16);
  opacity: 0.4 !important;

  &::before {
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' id='icon-search' viewBox='0 0 34 32'%3E%3Cpath d='M22.627 25.234l6.18 6.172c0.78 0.792 2.040 0.792 2.82 0 0.784-0.79 0.784-2.068 0-2.86l-6.16-6.16c1.74-2.336 2.774-5.232 2.774-8.372 0-7.74-6.274-14.014-14.012-14.014-7.74 0-14.014 6.274-14.014 14.014s6.274 14.014 14.014 14.014c3.15 0 6.058-1.040 8.398-2.794zM14.227 24.024c-5.526 0-10.008-4.48-10.008-10.010 0-5.528 4.48-10.010 10.010-10.010 5.528 0 10.008 4.48 10.008 10.010 0 5.528-4.48 10.010-10.006 10.010h-0.004z'%3E%3C/path%3E%3C/svg%3E") !important;
    animation: none !important;
  }
}

.fs-search-submit {
  position: absolute;
  top: 50%;
  right: rem(16);
  display: flex;
  padding: 0;
  color: $color-primary-blue-300;
  font-size: rem(32);
  line-height: 1;
  background: transparent;
  border: 0;
  transform: translate(0, -50%);
  visibility: hidden;
  opacity: 0;
  appearance: none;

  .facetwp-type-search:focus-within & {
    visibility: visible;
    opacity: 1;
  }

  svg {
    border: 2px solid $color-primary-blue-300;
    border-radius: 50%;
  }
}

/*----------  Facet: fSelect  ----------*/

.fs {
  &-wrap {
    --input-background: #{$color-primary-blue-300};
    --input-border: var(--input-background);
    --arrow-color: #{$color-white-190};
    position: relative;
    display: inline-block;
    line-height: 1;
    cursor: pointer;

    &:hover {
      --input-border: #{$color-primary-blue-300};
      --input-background: #{$color-primary-blue-200};
    }

    &.fs-default {
      --input-background: #{$color-white-100};
      --input-border: #{$color-gray-200};
      --arrow-color: #{$color-black-190};

      &:hover {
        --input-border: #{$color-primary-blue-700};
      }
    }

    .hidden {
      display: none;
    }
  }

  &-wrap,
  &-label-wrap {
    width: 100%;
    height: 100%;
  }

  &-label-wrap {
    position: relative;
    background-color: var(--input-background);
    border: 2px solid var(--input-border);
    border-radius: 3px;
    cursor: default;
    transition: background 0.3s ease-in-out, border 0.3s ease-in-out;

    &:hover {
      filter: $shadow--3;
    }

    &:not([data-num='0'])::after {
      content: attr(data-num);
      position: absolute;
      top: 50%;
      right: 36px;
      padding: rem(2) rem(8);
      @extend %font-ui-text-sm;
      font-weight: bold;
      background: $color-white-100;
      border-radius: 30px;
      transform: translate(0, -50%);
    }
  }

  &-label-wrap,
  &-dropdown {
    user-select: none;
  }

  &-label-field {
    position: absolute;
    top: 50%;
    left: rem(16);
    z-index: 1;
    margin: 0;
    color: $color-white-170;
    @extend %font-ui-text-lg;
    font-weight: normal;
    transform: translate(0, -100%) scale(0.85);
    transform-origin: left center;
    pointer-events: none;

    .fs-default & {
      color: $color-black-190;
      transform: translate(0, -50%) scale(1);
    }
  }

  &-label {
    position: relative;
    top: 36%;
    height: 100%;
    padding: rem(8) rem(72) rem(8) rem(16);
    overflow: hidden;
    color: $color-white-100;
    @extend %font-ui-text-lg-bold;
    white-space: nowrap;
    text-overflow: ellipsis;

    .fs-default & {
      top: unset;
    }
  }

  &-arrow {
    position: absolute;
    top: 0;
    right: rem(16);
    bottom: 0;
    width: 0;
    height: 0;
    margin: auto;
    border-top: 5px solid var(--arrow-color);
    border-right: 5px solid transparent;
    border-left: 5px solid transparent;
    transition: ease-in 0.15s;

    .fs-open & {
      transform: rotate(-180deg);
    }
  }

  &-dropdown {
    position: absolute;
    z-index: 1000;
    width: 100%;
    margin: 0;
    background-color: #fff;
    border: 1px solid #ddd;

    .fs-options {
      max-height: 260px;
      overflow: auto;
    }
  }

  &-search {
    padding: 0 8px;
    border-bottom: 1px solid #eee;

    input {
      width: 100%;
      padding: 6px 0;
      border: 0;
      outline: none;
      box-shadow: none !important;
    }
  }

  &-option,
  &-search,
  &-optgroup-label,
  &-no-results {
    padding: rem(12);
    cursor: default;
  }

  &-option {
    --checkbox-bg: #{$color-gray-field};
    --checkbox-border: #{$color-gray-100};
    position: relative;
    display: flex;
    gap: rem(12);
    line-height: 1.15;
    word-break: break-all;
    cursor: pointer;

    &:hover {
      --checkbox-bg: #{$color-primary-blue-800};
      --checkbox-border: #{$color-primary-blue-700};
      background: $color-gray-field;

      i {
        border-width: 2px;
      }
    }

    &.selected {
      --checkbox-bg: #{$color-primary-blue-400};
      --checkbox-border: #{$color-primary-blue-300};

      i::before {
        --borderWidth: 2px;
        --height: 10px;
        --width: 5px;
        --borderColor: #{$color-white-100};
        content: '';
        position: absolute;
        top: 50%;
        left: 50%;
        display: block;
        width: var(--width);
        height: var(--height);
        border-right: var(--borderWidth) solid var(--borderColor);
        border-bottom: var(--borderWidth) solid var(--borderColor);
        transform: translate(-50%, -60%) rotate(45deg);
      }
    }

    &:last-child {
      border-bottom: 0;
    }

    &.disabled {
      cursor: default;
      opacity: 0.4;
    }

    &.d1 .fs-option-label {
      padding-left: 0 !important; // Do not indent children checkboxes.
    }
  }

  &-optgroup-label {
    font-weight: bold;
    text-align: center;
    background-color: #f8f8f8;
  }

  &-checkbox {
    display: block;

    i {
      position: relative;
      display: block;
      width: 1.2em;
      height: 1.2em;
      margin: auto;
      background-color: var(--checkbox-bg);
      border: 1px solid var(--checkbox-border);
      border-radius: 4px;
    }
  }

  &-fselect-apply {
    padding: rem(8) rem(16);
    text-align: right;
    border-top: 1px solid $color-gray-200;
    cursor: default;
  }
}

.no-flexbox-gap .fs-option .fs-checkbox {
  margin-right: rem(12);
}

